package StrategyDesignPattern.WithoutStrategyDesignPattern;

public class OffRoadVehicle extends Vehicle{
    @Override
    public void drive(){
        System.out.println("Sports drive capability");
    }
}
