package StrategyDesignPattern.WithoutStrategyDesignPattern;

public class PassengerVehicle extends Vehicle{
}
