package StrategyDesignPattern.WithoutStrategyDesignPattern;

public class SportsVehicle extends Vehicle{
    public void drive() {
        System.out.println("Sports drive capability");
    }
}
